update color contrast issues in dev tools chrome test

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,8 +1,8 @@
 :root {
-    --primary-color: #f28500;
-    --secondary-color: #f7f052;
+    --primary-color: #a33100;
+    --secondary-color: #ff9819;
     --accent1-color: #563f1b;
-    --accent2-color: #38726c;
+    --accent2-color: #585858;
     --white: #fff;
     --black: #000
 }
@@ -21,7 +21,7 @@ header {
 
 #logo {
     grid-column: 1 / span 2;
-    width: 100px;
+    width: 70px;
     border-radius: 50%;
 }
 
@@ -33,6 +33,7 @@ body {
 nav a {
     text-decoration: none;
     font-family: "Roboto";
+    color: var(--white);
 }
 
 h1 {
@@ -42,7 +43,7 @@ h1 {
     left: 0;
     text-align: center;
     font-family: "Trade Winds", system-ui;
-    color: var(--primary-color);
+    color: white;
     background-color: var(--accent1-color);
     opacity: 0.9;
 }
@@ -53,7 +54,7 @@ h2 {
 }
 
 #heading-paragraph {
-    color: white;
+    color: var(--white);
 }
 
 p {
@@ -109,19 +110,10 @@ nav {
 }
 
 .navigation a {
-    background-color: var(--primary-color);
-    color: var(--white);
     border-radius: 5px;
     padding: 10px 0px 10px 0px;
     display: block;
 }
-
-.navigation a:hover {
-    color: var(--white);
-    text-decoration: underline;
-    transition: 0.5s;
-}
-
 /* end of navigation design*/
 
 /* Style the History section elements */
@@ -175,7 +167,7 @@ figure img {
 
 figure figcaption {
     background-color: #222;
-    color: #fff;
+    color: var(--white);
     font: italic smaller sans-serif;
     padding: 3px;
     text-align: center;
@@ -186,7 +178,7 @@ figure figcaption {
 footer {
     margin-top: 3%;
     background-color: var(--accent1-color);
-    color: white;
+    color: var(--white);
     display: flex;
     justify-content: space-between;
     padding-left: 2%;
